WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86378
REGRESSION(
r116796
): Assertion failure in API tests
https://bugs.webkit.org/show_bug.cgi?id=86378
Summary
REGRESSION(r116796): Assertion failure in API tests
Antti Koivisto
Reported
2012-05-14 09:13:18 PDT
Looks like
r116796
caused an assertion failure. From
http://build.webkit.org/builders/Lion%20Debug%20%28Tests%29/builds/6498/steps/run-api-tests/logs/stdio
: Note: Google Test filter = WebKit2.WKConnectionTest [==========] Running 1 test from 1 test case. [----------] Global test environment set-up. [----------] 1 test from WebKit2 [ RUN ] WebKit2.WKConnectionTest [ OK ] WebKit2.WKConnectionTest (153 ms) [----------] 1 test from WebKit2 (153 ms total) [----------] Global test environment tear-down [==========] 1 test from 1 test case ran. (153 ms total) [ PASSED ] 1 test. YOU HAVE 1 DISABLED TEST ASSERTION FAILED: !m_isValid /Volumes/Data/slave/lion-intel-debug/build/Source/WebKit2/Platform/WorkQueue.cpp(39) : WorkQueue::~WorkQueue() 1 0x10f1a3d25 WorkQueue::~WorkQueue() 2 0x10efc3506 WebKit::WebContext::~WebContext() 3 0x10efc3125 WebKit::WebContext::~WebContext() 4 0x10efc30f9 WebKit::WebContext::~WebContext() 5 0x10ee444c3 WTF::ThreadSafeRefCounted<WebKit::APIObject>::deref() 6 0x10efd8ffc void WTF::derefIfNotNull<WebKit::WebContext>(WebKit::WebContext*) 7 0x10f148ea8 WTF::RefPtr<WebKit::WebContext>::~RefPtr() 8 0x10f13e6f5 WTF::RefPtr<WebKit::WebContext>::~RefPtr() 9 0x10f13bca4 WebKit::WebProcessProxy::~WebProcessProxy() 10 0x10f13b9b5 WebKit::WebProcessProxy::~WebProcessProxy() 11 0x10f13b989 WebKit::WebProcessProxy::~WebProcessProxy() 12 0x10ee44c33 WTF::RefCounted<WebKit::WebProcessProxy>::deref() 13 0x10ee44bcc void WTF::derefIfNotNull<WebKit::WebProcessProxy>(WebKit::WebProcessProxy*) 14 0x10ee44b98 WTF::RefPtr<WebKit::WebProcessProxy>::~RefPtr() 15 0x10ee43ef5 WTF::RefPtr<WebKit::WebProcessProxy>::~RefPtr() 16 0x10f098f14 WebKit::WebPageProxy::~WebPageProxy() 17 0x10f098ba5 WebKit::WebPageProxy::~WebPageProxy() 18 0x10f098b79 WebKit::WebPageProxy::~WebPageProxy() 19 0x10ee444c3 WTF::ThreadSafeRefCounted<WebKit::APIObject>::deref() 20 0x10f05949c void WTF::derefIfNotNull<WebKit::WebPageProxy>(WebKit::WebPageProxy*) 21 0x10f0594c8 WTF::RefPtr<WebKit::WebPageProxy>::~RefPtr() 22 0x10f0592f5 WTF::RefPtr<WebKit::WebPageProxy>::~RefPtr() 23 0x10f184f80 -[WKViewData .cxx_destruct] 24 0x7fff945b24ed object_cxxDestructFromClass 25 0x7fff945ae5f1 objc_destructInstance 26 0x7fff945aed33 object_dispose 27 0x7fff892c5276 -[NSObject dealloc] 28 0x10f185511 -[WKView dealloc] 29 0x7fff945af03c (anonymous namespace)::AutoreleasePoolPage::pop(void*) 30 0x7fff892c5b05 _CFAutoreleasePoolPop 31 0x7fff8ac916f3 -[NSAutoreleasePool drain]
Attachments
Patch
(1.19 KB, patch)
2012-05-14 10:35 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-05-14 09:22:14 PDT
Looks like I intentionally broke everything. Taking.
Andreas Kling
Comment 2
2012-05-14 10:35:51 PDT
Created
attachment 141751
[details]
Patch
Andreas Kling
Comment 3
2012-05-14 11:03:50 PDT
Committed
r116969
: <
http://trac.webkit.org/changeset/116969
>
WebKit Review Bot
Comment 4
2012-05-14 11:10:19 PDT
Re-opened since this is blocked by 86386
Andreas Kling
Comment 5
2012-05-14 11:16:22 PDT
Comment on
attachment 141751
[details]
Patch Clearing flags on attachment: 141751 Committed
r116971
: <
http://trac.webkit.org/changeset/116971
>
Andreas Kling
Comment 6
2012-05-14 11:16:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug