REGRESSION(r116796): Assertion failure in API tests <http://webkit.org/b/86378> <rdar://problem/10777218>

Reviewed by Anders Carlsson.

Invalidate the plugin work queue in ~WebContext to avoid hitting
the !m_isValid assertion in ~WorkQueue later on.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::~WebContext):

Canonical link: https://commits.webkit.org/103964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116969 268f45cc-cd09-0410-ab3c-d52691b4dbfc